[gd_scene load_steps=17 format=3 uid="uid://brichvrpyddl7"]

[ext_resource type="Script" path="res://scenes/SceneManager.gd" id="1_a5i4i"]
[ext_resource type="PackedScene" uid="uid://dyuhogh5sfbgn" path="res://scenes/entities/player.tscn" id="2_xs6gk"]
[ext_resource type="AudioStream" uid="uid://dma2dykllih1w" path="res://sounds/music/Victory (RT 3)/Chiptune Victory main.wav" id="3_343by"]
[ext_resource type="PackedScene" uid="uid://dtmo0tfnfohp0" path="res://ui/HUD.tscn" id="4_g3rtf"]
[ext_resource type="Script" path="res://scenes/SSCamera.gd" id="5_vfu6i"]
[ext_resource type="AudioStream" uid="uid://c104ebggsqnpy" path="res://sounds/sfx/Environments and Signals/Loser.wav" id="6_pdykc"]
[ext_resource type="AudioStream" uid="uid://b7b8436rm12yl" path="res://sounds/sfx/Environments and Signals/Fanfare.wav" id="7_jepnu"]
[ext_resource type="PackedScene" uid="uid://c0xclyg5d6cc2" path="res://ui/Pause.tscn" id="8_gfukx"]
[ext_resource type="Script" path="res://Godot Plugins/music/OvaniPlayer.gd" id="9_1f2bx"]
[ext_resource type="AudioStream" uid="uid://c5vdf7p1xngg0" path="res://sounds/music/Victory (RT 3)/Chiptune Victory Intensity 1.wav" id="10_ydir6"]
[ext_resource type="AudioStream" uid="uid://bslqh4hmtoqwh" path="res://sounds/music/Victory (RT 3)/Chiptune Victory Intensity 2.wav" id="11_lepu7"]
[ext_resource type="AudioStream" uid="uid://bp7hc4tvkfb6r" path="res://sounds/music/Victory (RT 3)/Chiptune Victory cut 30.wav" id="12_iuev7"]
[ext_resource type="AudioStream" uid="uid://yx37i55jobnv" path="res://sounds/music/Victory (RT 3)/Chiptune Victory cut 60.wav" id="13_mhmw1"]
[ext_resource type="Script" path="res://Godot Plugins/music/OvaniSong.gd" id="14_1tcj0"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kmw6m"]
a = Vector2(0, -48)
b = Vector2(0, 61)

[sub_resource type="Resource" id="Resource_jdev2"]
script = ExtResource("14_1tcj0")
Intensity1 = ExtResource("10_ydir6")
Intensity2 = ExtResource("11_lepu7")
Intensity3 = ExtResource("3_343by")
Loop30 = ExtResource("12_iuev7")
Loop60 = ExtResource("13_mhmw1")
ReverbTail = 3.0
SongMode = 0

[node name="sceneManger" type="Node2D"]
process_mode = 3
script = ExtResource("1_a5i4i")

[node name="Player" parent="." instance=ExtResource("2_xs6gk")]
process_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_g3rtf")]

[node name="Pause" parent="CanvasLayer" node_paths=PackedStringArray("scene_manager") instance=ExtResource("8_gfukx")]
scene_manager = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 1
zoom = Vector2(3.5, 3.5)
position_smoothing_speed = 60.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.69
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_vfu6i")

[node name="Area2D" type="Area2D" parent="Camera2D"]
position = Vector2(-175, -15)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D"]
scale = Vector2(2, 2)
shape = SubResource("SegmentShape2D_kmw6m")

[node name="BGPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_343by")

[node name="DieSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pdykc")

[node name="winSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jepnu")

[node name="die_animation" type="Timer" parent="."]

[node name="Reset_Level_Timer" type="Timer" parent="."]

[node name="OvaniPlayer" type="Node" parent="."]
script = ExtResource("9_1f2bx")
QueuedSongs = Array[ExtResource("14_1tcj0")]([SubResource("Resource_jdev2")])
Intensity = 0.512

[connection signal="player_died_reload" from="Player" to="." method="_on_player_player_died_reload"]
[connection signal="body_entered" from="Camera2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Reset_Level_Timer" to="." method="_on_reset_level_timer_timeout"]
